fix bug of head menu on mobile

--- a/public_html/html/css/erveddy.less
+++ b/public_html/html/css/erveddy.less
@@ -300,6 +300,14 @@ h1{
 .profile-head-img{
     -webkit-background-size: cover; background: url(../img/merit_head_bg.png) 50% 50% / cover;height: 552px;
 }
+.contact1-head-img{
+    -webkit-background-size: cover; background: url(../img/merit_head_bg.png) 50% 50% / cover;height: 552px;
+}
+.contact2-head-img{
+    -webkit-background-size: cover; background: url(../img/merit_head_bg.png) 50% 50% / cover;height: 552px;
+}
+
+
 
 .number-title{
     color: @boldgreen;
